<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ui.parts.CreateTareaActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/sVTarea_Create"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        app:queryHint="@string/eT_delete_proyecto"
        />

    <EditText
        android:id="@+id/eTTarea_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eT_create_tarea"/>

    <Button
        android:id="@+id/btnTarea_Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/S_activity_create_proyecto"/>



</LinearLayout>